//
//  CalendarListViewController.swift
//  SWSApp
//
//  Created by Thillaiganesh, C. on 11/05/18.
//  Copyright © 2018 maria.min-hui.yu. All rights reserved.
//
...
                self.calendarMonthController = nil
            }
            for view in self.bottomView.subviews{
                view.isHidden = true
            }
            
            self.calendarMonthController = UIStoryboard(name: "Calendar", bundle: nil).instantiateViewController(withIdentifier: "CalendarMonthViewController") as? CalendarMonthViewController
            self.addChildViewController(self.calendarMonthController!)
            self.calendarMonthController?.delegate = self
            self.calendarMonthController?.globalEventVisit = self.globalVisit
            self.calendarMonthController?.view.frame = CGRect(x: self.bottomView.bounds.origin.x, y: self.bottomView.bounds.origin.y, width: self.bottomView.frame.size.width, height: self.bottomView.bounds.size.height)
            self.bottomView.addSubview((self.calendarMonthController?.view)!)
            
...
        dropDownAddNew.bottomOffset = CGPoint(x: 0, y:(dropDownAddNew.anchorView?.plainView.bounds.height)!)
        dropDownAddNew.backgroundColor = UIColor.white
        dropDownAddNew.selectionBackgroundColor = UIColor.clear
        dropDownAddNew.textFont = UIFont(name:"Ubuntu", size: 14.0)!
        dropDownAddNew.shadowOffset = CGSize(width: 0, height: 15)
        dropDownAddNew.textFont = UIFont(name:"Ubuntu", size: 14.0)!
        dropDownAddNew.dataSource = ["Visit", "Event"]
        
        dropDownAddNew.selectionAction = { (index: Int, item: String) in
            print("Selected item: \(item) at index: \(index)")
            
            switch index {
            case 0:
...
        dropDownCalView.anchorView = calViewButton
        dropDownCalView.bottomOffset = CGPoint(x: 0, y:(dropDownCalView.anchorView?.plainView.bounds.height)!)
        dropDownCalView.backgroundColor = UIColor.white
        dropDownCalView.selectionBackgroundColor = UIColor.clear
        dropDownCalView.shadowOffset = CGSize(width: 0, height: 15)
        dropDownCalView.textFont = UIFont(name:"Ubuntu", size: 14.0)!
        dropDownCalView.dataSource = ["Day View", "Week View", "Month View"]
        
        
        dropDownCalView.selectionAction = { (index: Int, item: String) in
            print("Selected item: \(item) at index: \(index)")
            
            switch index {
...
