...
import UIKit

class CalendarFilter {
    
    func sectionNames(isManager: Bool = false) -> [String] {
        var names = [String]()
        names.append("Appointment Type")
        
        if isManager {
            names.append("My Team")
        }
        
        return names
    }
    
    //var sectionNames : Array<Any>  = ["Appointment Type"]
    
    var sectionItems : [[Any]] = [ ["Visits", "Events"] ]
    
}

let CalendarFilterCell = "calendarMenuTableTableViewCell"

struct CalendarFilterMenuModel {
...
