...
        
        // Set DesignableUITextField size and position
        
        dateTextField =  DesignableUITextField(frame: CGRect(x: 0, y: 30, width: 180, height: 40))
        dateTextField.rightImage = UIImage(named:"Calender_Icon")!
        dateTextField.rightPadding = 8
        dateTextField.placeholder = "MM/DD/YYYY"
        dateTextField.accessibilityIdentifier = "dateTextFieldID"
        dateTextField.font = UIFont(name:"Ubuntu", size: 14.0)
        dateTextField.layer.borderColor = UIColor(red: 204/255, green: 204/255, blue: 204/255, alpha: 1.0).cgColor
        dateTextField.layer.borderWidth = 1.0
        dateTextField.layer.cornerRadius = 2.0
        dateTextField.tag = 200
...
        self.addSubview(dateTextField)
        
        startTimeTextField =  DesignableUITextField(frame: CGRect(x: 230, y: 30, width: 100, height: 40))
        startTimeTextField.rightImage = UIImage(named:"dropDownLight")!
        startTimeTextField.rightPadding = 8
        startTimeTextField.backgroundColor = UIColor(red: 235/255, green: 235/255, blue: 235/255, alpha: 1.0)
        startTimeTextField.placeholder = "HH:MM"
        startTimeTextField.accessibilityIdentifier = "startTimeTextFieldID"
        startTimeTextField.font = UIFont(name:"Ubuntu", size: 14.0)
        startTimeTextField.layer.borderColor = UIColor(red: 235/255, green: 235/255, blue: 235/255, alpha: 1.0).cgColor
        startTimeTextField.tag = 201
        startTimeTextField.layer.borderWidth = 1.0
        startTimeTextField.layer.cornerRadius = 2.0
...
        let toolBar = UIToolbar()
        toolBar.barStyle = UIBarStyle.default
        toolBar.isTranslucent = true
        toolBar.tintColor = UIColor(red: 76/255, green: 217/255, blue: 100/255, alpha: 1)
        toolBar.sizeToFit()
        
        let doneButton = UIBarButtonItem(title: "Done", style: UIBarButtonItemStyle.plain, target: self, action: #selector(handleDatePicker(sender:)))
        let spaceButton = UIBarButtonItem(barButtonSystemItem: UIBarButtonSystemItem.flexibleSpace, target: nil, action: nil)
        let cancelButton = UIBarButtonItem(title: "Cancel", style: UIBarButtonItemStyle.plain, target: self, action: #selector(doneButton(sender:)))
        
        toolBar.setItems([cancelButton, spaceButton, doneButton], animated: false)
        toolBar.isUserInteractionEnabled = true
        
...
